# libazftp

./: .gitattributes  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README.md  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cnf/: .azftpd_auth  azftpd.cnf
include/: Makefile  Makefile.am  Makefile.in  libazftpcnf.h  libazftpcnf.h.in  libazftpcnf.h.in~  stamp-h1
include/azftp/: Makefile  Makefile.am  Makefile.in  az_ftp_client.h  az_ftp_define.h  az_ftp_server.h
platform/rpm/: libazftp_build.spec
platform/vsnet/: azftp.sln
platform/vsnet/azftpcli/: azftpcli.vcxproj  azftpcli.vcxproj.filters
platform/vsnet/azftpser/: azftpser.vcxproj  azftpser.vcxproj.filters
platform/vsnet/libazftpcli/: libazftpcli.vcxproj  libazftpcli.vcxproj.filters
platform/vsnet/libazftpser/: libazftpser.vcxproj  libazftpser.vcxproj.filters
platform/vsnet/test/: test.vcxproj  test.vcxproj.filters
src/: Makefile  Makefile.am  Makefile.in
src/client/: Makefile  Makefile.am  Makefile.in  az_ftp_client_ctrl.c  az_ftp_client_ctrl.h  az_ftp_client_dtp.c  az_ftp_client_dtp.h  az_ftp_client_pi.c  az_ftp_climsg.c  az_ftp_include.h
src/core/: az_ftp_code.c  az_ftp_code.h  az_ftp_format.c  az_ftp_format.h  az_ftp_message.c  az_ftp_message.h  az_ftp_tools.c  az_ftp_tools.h
src/server/: Makefile  Makefile.am  Makefile.in  az_ftp_include.h  az_ftp_response.c  az_ftp_server.c  az_ftp_server_dtp.c  az_ftp_server_dtp.h  az_ftp_server_pi.c  az_ftp_server_pi.h
src/test/: Makefile  Makefile.am  Makefile.in  test-client.c
